WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269999
AX: VoiceOver reports the datetime value in the wrong time zone.
https://bugs.webkit.org/show_bug.cgi?id=269999
Summary
AX: VoiceOver reports the datetime value in the wrong time zone.
Andres Gonzalez
Reported
2024-02-23 12:07:45 PST
.
Attachments
Patch
(2.81 KB, patch)
2024-02-23 12:32 PST
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Patch
(2.71 KB, patch)
2024-02-23 13:38 PST
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-23 12:08:05 PST
<
rdar://problem/123522296
>
Andres Gonzalez
Comment 2
2024-02-23 12:32:31 PST
Created
attachment 470029
[details]
Patch
chris fleizach
Comment 3
2024-02-23 12:58:50 PST
Comment on
attachment 470029
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=470029&action=review
> Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperMac.mm:1519 > + NSTimeZone *timeZone = [NSTimeZone localTimeZone];
no need to make a local variable for timeZone
> Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperMac.mm:1720 > + RetainPtr localDate = [NSDate dateWithTimeInterval:offset sinceDate:gmtDate];
don't think we need to make a RetainPtr her first. we should be able to just return the [NSDate ] which will be autoreleased
Andres Gonzalez
Comment 4
2024-02-23 13:38:43 PST
Created
attachment 470033
[details]
Patch
Andres Gonzalez
Comment 5
2024-02-23 13:39:57 PST
(In reply to chris fleizach from
comment #3
)
> Comment on
attachment 470029
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=470029&action=review
> > > Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperMac.mm:1519 > > + NSTimeZone *timeZone = [NSTimeZone localTimeZone]; > > no need to make a local variable for timeZone > > > Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperMac.mm:1720 > > + RetainPtr localDate = [NSDate dateWithTimeInterval:offset sinceDate:gmtDate]; > > don't think we need to make a RetainPtr her first. we should be able to just > return the [NSDate ] which will be autoreleased
All addressed.
chris fleizach
Comment 6
2024-02-23 13:59:08 PST
Comment on
attachment 470033
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=470033&action=review
> Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperMac.mm:1519 > + return -1 * [[NSTimeZone localTimeZone] secondsFromGMTForDate:now];
this can be a 1 liner now! return -1 * [[NSTimeZone localTimeZone] secondsFromGMTForDate:[NSDate date]];
EWS
Comment 7
2024-02-23 18:13:16 PST
Committed
275265@main
(26acc630c346): <
https://commits.webkit.org/275265@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 470033
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug