AX: VoiceOver reports the datetime value in the wrong time zone. https://bugs.webkit.org/show_bug.cgi?id=269999 <rdar://problem/123522296>

Reviewed by Chris Fleizach.

VoiceOver expects the value of dateTime elements to be in local time zone. Since we store those values in GMT, we need to convert them to local times before returning them.

* Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(gmtToLocalTimeOffset):
(-[WebAccessibilityObjectWrapper accessibilityAttributeValue:]):

Canonical link: https://commits.webkit.org/275265@main